--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ h6 {
 }
 
 [class*=__container] {
-  max-width: 73.125rem;
+  max-width: 63.125rem;
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
   margin: 0 auto;
@@ -180,27 +180,27 @@ h6 {
   line-height: 1.2;
 }
 
-@supports (font-size: clamp( 1.25rem , 1.0227272727rem  +  1.1363636364vw , 1.875rem )) {
+@supports (font-size: clamp( 1.25rem , 0.9722222222rem  +  1.3888888889vw , 1.875rem )) {
   .h {
-    font-size: clamp( 1.25rem , 1.0227272727rem  +  1.1363636364vw , 1.875rem );
+    font-size: clamp( 1.25rem , 0.9722222222rem  +  1.3888888889vw , 1.875rem );
   }
 }
 
-@supports not (font-size: clamp( 1.25rem , 1.0227272727rem  +  1.1363636364vw , 1.875rem )) {
+@supports not (font-size: clamp( 1.25rem , 0.9722222222rem  +  1.3888888889vw , 1.875rem )) {
   .h {
-    font-size: calc(1.25rem + 0.625 * (100vw - 20rem) / 55);
+    font-size: calc(1.25rem + 0.625 * (100vw - 20rem) / 45);
   }
 }
 
-@supports (margin-bottom: clamp( 1.875rem , 1.1931818182rem  +  3.4090909091vw , 3.75rem )) {
+@supports (margin-bottom: clamp( 1.875rem , 1.0416666667rem  +  4.1666666667vw , 3.75rem )) {
   .h {
-    margin-bottom: clamp( 1.875rem , 1.1931818182rem  +  3.4090909091vw , 3.75rem );
+    margin-bottom: clamp( 1.875rem , 1.0416666667rem  +  4.1666666667vw , 3.75rem );
   }
 }
 
-@supports not (margin-bottom: clamp( 1.875rem , 1.1931818182rem  +  3.4090909091vw , 3.75rem )) {
+@supports not (margin-bottom: clamp( 1.875rem , 1.0416666667rem  +  4.1666666667vw , 3.75rem )) {
   .h {
-    margin-bottom: calc(1.875rem + 1.875 * (100vw - 20rem) / 55);
+    margin-bottom: calc(1.875rem + 1.875 * (100vw - 20rem) / 45);
   }
 }
 
@@ -209,27 +209,27 @@ h6 {
   line-height: 1.4375;
 }
 
-@supports (font-size: clamp( 0.875rem , 0.8295454545rem  +  0.2272727273vw , 1rem )) {
+@supports (font-size: clamp( 0.875rem , 0.8194444444rem  +  0.2777777778vw , 1rem )) {
   .p {
-    font-size: clamp( 0.875rem , 0.8295454545rem  +  0.2272727273vw , 1rem );
+    font-size: clamp( 0.875rem , 0.8194444444rem  +  0.2777777778vw , 1rem );
   }
 }
 
-@supports not (font-size: clamp( 0.875rem , 0.8295454545rem  +  0.2272727273vw , 1rem )) {
+@supports not (font-size: clamp( 0.875rem , 0.8194444444rem  +  0.2777777778vw , 1rem )) {
   .p {
-    font-size: calc(0.875rem + 0.125 * (100vw - 20rem) / 55);
+    font-size: calc(0.875rem + 0.125 * (100vw - 20rem) / 45);
   }
 }
 
-@supports (margin-bottom: clamp( 0.625rem , 0.3977272727rem  +  1.1363636364vw , 1.25rem )) {
+@supports (margin-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem )) {
   .p {
-    margin-bottom: clamp( 0.625rem , 0.3977272727rem  +  1.1363636364vw , 1.25rem );
+    margin-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem );
   }
 }
 
-@supports not (margin-bottom: clamp( 0.625rem , 0.3977272727rem  +  1.1363636364vw , 1.25rem )) {
+@supports not (margin-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem )) {
   .p {
-    margin-bottom: calc(0.625rem + 0.625 * (100vw - 20rem) / 55);
+    margin-bottom: calc(0.625rem + 0.625 * (100vw - 20rem) / 45);
   }
 }
 
@@ -258,15 +258,15 @@ h6 {
   max-width: 93.75rem;
 }
 
-@supports (gap: clamp( 0.9375rem , -7.7703651685rem  +  14.0449438202vw , 2.5rem )) {
+@supports (gap: clamp( 0.9375rem , -85.1736111111rem  +  138.8888888889vw , 2.5rem )) {
   .header__container {
-    gap: clamp( 0.9375rem , -7.7703651685rem  +  14.0449438202vw , 2.5rem );
+    gap: clamp( 0.9375rem , -85.1736111111rem  +  138.8888888889vw , 2.5rem );
   }
 }
 
-@supports not (gap: clamp( 0.9375rem , -7.7703651685rem  +  14.0449438202vw , 2.5rem )) {
+@supports not (gap: clamp( 0.9375rem , -85.1736111111rem  +  138.8888888889vw , 2.5rem )) {
   .header__container {
-    gap: calc(0.9375rem + 1.5625 * (100vw - 62rem) / 11.125);
+    gap: calc(0.9375rem + 1.5625 * (100vw - 62rem) / 1.125);
   }
 }
 
@@ -286,15 +286,15 @@ h6 {
   display: flex;
 }
 
-@supports (gap: clamp( 0.9375rem , -4.2872191011rem  +  8.4269662921vw , 1.875rem )) {
+@supports (gap: clamp( 0.9375rem , -50.7291666667rem  +  83.3333333333vw , 1.875rem )) {
   .header__menu {
-    gap: clamp( 0.9375rem , -4.2872191011rem  +  8.4269662921vw , 1.875rem );
+    gap: clamp( 0.9375rem , -50.7291666667rem  +  83.3333333333vw , 1.875rem );
   }
 }
 
-@supports not (gap: clamp( 0.9375rem , -4.2872191011rem  +  8.4269662921vw , 1.875rem )) {
+@supports not (gap: clamp( 0.9375rem , -50.7291666667rem  +  83.3333333333vw , 1.875rem )) {
   .header__menu {
-    gap: calc(0.9375rem + 0.9375 * (100vw - 62rem) / 11.125);
+    gap: calc(0.9375rem + 0.9375 * (100vw - 62rem) / 1.125);
   }
 }
 
@@ -397,7 +397,6 @@ h6 {
 }
 
 .page__container {
-  max-width: 75rem;
   color: rgb(51, 51, 51);
 }
 
@@ -408,28 +407,93 @@ h6 {
   display: flex;
 }
 
-@supports (margin-top: clamp( 0.9375rem , 0.1420454545rem  +  3.9772727273vw , 3.125rem )) {
+@supports (margin-top: clamp( 0.9375rem , -0.0347222222rem  +  4.8611111111vw , 3.125rem )) {
   .page__logo {
-    margin-top: clamp( 0.9375rem , 0.1420454545rem  +  3.9772727273vw , 3.125rem );
+    margin-top: clamp( 0.9375rem , -0.0347222222rem  +  4.8611111111vw , 3.125rem );
   }
 }
 
-@supports not (margin-top: clamp( 0.9375rem , 0.1420454545rem  +  3.9772727273vw , 3.125rem )) {
+@supports not (margin-top: clamp( 0.9375rem , -0.0347222222rem  +  4.8611111111vw , 3.125rem )) {
   .page__logo {
-    margin-top: calc(0.9375rem + 2.1875 * (100vw - 20rem) / 55);
+    margin-top: calc(0.9375rem + 2.1875 * (100vw - 20rem) / 45);
   }
 }
 
-@supports (margin-bottom: clamp( 1.25rem , 1.0227272727rem  +  1.1363636364vw , 1.875rem )) {
+@supports (margin-bottom: clamp( 1.25rem , 0.9722222222rem  +  1.3888888889vw , 1.875rem )) {
   .page__logo {
-    margin-bottom: clamp( 1.25rem , 1.0227272727rem  +  1.1363636364vw , 1.875rem );
+    margin-bottom: clamp( 1.25rem , 0.9722222222rem  +  1.3888888889vw , 1.875rem );
   }
 }
 
-@supports not (margin-bottom: clamp( 1.25rem , 1.0227272727rem  +  1.1363636364vw , 1.875rem )) {
+@supports not (margin-bottom: clamp( 1.25rem , 0.9722222222rem  +  1.3888888889vw , 1.875rem )) {
   .page__logo {
-    margin-bottom: calc(1.25rem + 0.625 * (100vw - 20rem) / 55);
+    margin-bottom: calc(1.25rem + 0.625 * (100vw - 20rem) / 45);
   }
+}
+
+.page__menu {
+  white-space: nowrap;
+  font-weight: 700;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 1.25rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-bottom: 0.625rem;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+  max-width: 63.125rem;
+  margin: auto;
+}
+
+@supports (font-size: clamp( 0.875rem , 0.8194444444rem  +  0.2777777778vw , 1rem )) {
+  .page__menu {
+    font-size: clamp( 0.875rem , 0.8194444444rem  +  0.2777777778vw , 1rem );
+  }
+}
+
+@supports not (font-size: clamp( 0.875rem , 0.8194444444rem  +  0.2777777778vw , 1rem )) {
+  .page__menu {
+    font-size: calc(0.875rem + 0.125 * (100vw - 20rem) / 45);
+  }
+}
+
+@supports (gap: clamp( 0.625rem , -4.1369047619rem  +  9.5238095238vw , 1.875rem )) {
+  .page__menu {
+    gap: clamp( 0.625rem , -4.1369047619rem  +  9.5238095238vw , 1.875rem );
+  }
+}
+
+@supports not (gap: clamp( 0.625rem , -4.1369047619rem  +  9.5238095238vw , 1.875rem )) {
+  .page__menu {
+    gap: calc(0.625rem + 1.25 * (100vw - 50rem) / 13.125);
+  }
+}
+
+@supports (margin-bottom: clamp( 0.9375rem , 0.5208333333rem  +  2.0833333333vw , 1.875rem )) {
+  .page__menu {
+    margin-bottom: clamp( 0.9375rem , 0.5208333333rem  +  2.0833333333vw , 1.875rem );
+  }
+}
+
+@supports not (margin-bottom: clamp( 0.9375rem , 0.5208333333rem  +  2.0833333333vw , 1.875rem )) {
+  .page__menu {
+    margin-bottom: calc(0.9375rem + 0.9375 * (100vw - 20rem) / 45);
+  }
+}
+
+.page__menu-item_weather a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.3125rem;
 }
 
 .page__breadcrumbs {
@@ -440,15 +504,15 @@ h6 {
   color: #6b6b6b;
 }
 
-@supports (margin-bottom: clamp( 0.625rem , 0.1704545455rem  +  2.2727272727vw , 1.875rem )) {
+@supports (margin-bottom: clamp( 0.625rem , 0.0694444444rem  +  2.7777777778vw , 1.875rem )) {
   .page__breadcrumbs {
-    margin-bottom: clamp( 0.625rem , 0.1704545455rem  +  2.2727272727vw , 1.875rem );
+    margin-bottom: clamp( 0.625rem , 0.0694444444rem  +  2.7777777778vw , 1.875rem );
   }
 }
 
-@supports not (margin-bottom: clamp( 0.625rem , 0.1704545455rem  +  2.2727272727vw , 1.875rem )) {
+@supports not (margin-bottom: clamp( 0.625rem , 0.0694444444rem  +  2.7777777778vw , 1.875rem )) {
   .page__breadcrumbs {
-    margin-bottom: calc(0.625rem + 1.25 * (100vw - 20rem) / 55);
+    margin-bottom: calc(0.625rem + 1.25 * (100vw - 20rem) / 45);
   }
 }
 
@@ -463,22 +527,33 @@ h6 {
   padding-left: 0.1875rem;
 }
 
-.article__title {
-  font-weight: 700;
-  line-height: 1.1111111111;
-  text-align: center;
-  margin-bottom: 1.25rem;
-}
-
-@supports (font-size: clamp( 1.25rem , 0.8863636364rem  +  1.8181818182vw , 2.25rem )) {
-  .article__title {
-    font-size: clamp( 1.25rem , 0.8863636364rem  +  1.8181818182vw , 2.25rem );
+@supports (padding-bottom: clamp( 1.875rem , 0.7638888889rem  +  5.5555555556vw , 4.375rem )) {
+  .article {
+    padding-bottom: clamp( 1.875rem , 0.7638888889rem  +  5.5555555556vw , 4.375rem );
   }
 }
 
-@supports not (font-size: clamp( 1.25rem , 0.8863636364rem  +  1.8181818182vw , 2.25rem )) {
+@supports not (padding-bottom: clamp( 1.875rem , 0.7638888889rem  +  5.5555555556vw , 4.375rem )) {
+  .article {
+    padding-bottom: calc(1.875rem + 2.5 * (100vw - 20rem) / 45);
+  }
+}
+
+.article__title {
+  font-weight: 700;
+  line-height: 1.1111111111;
+  margin-bottom: 1.25rem;
+}
+
+@supports (font-size: clamp( 1.25rem , 0.8055555556rem  +  2.2222222222vw , 2.25rem )) {
   .article__title {
-    font-size: calc(1.25rem + 1 * (100vw - 20rem) / 55);
+    font-size: clamp( 1.25rem , 0.8055555556rem  +  2.2222222222vw , 2.25rem );
+  }
+}
+
+@supports not (font-size: clamp( 1.25rem , 0.8055555556rem  +  2.2222222222vw , 2.25rem )) {
+  .article__title {
+    font-size: calc(1.25rem + 1 * (100vw - 20rem) / 45);
   }
 }
 
@@ -497,15 +572,15 @@ h6 {
   grid-template-columns: repeat(3, auto);
 }
 
-@supports (margin-bottom: clamp( 0.3125rem , -0.0284090909rem  +  1.7045454545vw , 1.25rem )) {
+@supports (margin-bottom: clamp( 0.3125rem , -0.1041666667rem  +  2.0833333333vw , 1.25rem )) {
   .article__info {
-    margin-bottom: clamp( 0.3125rem , -0.0284090909rem  +  1.7045454545vw , 1.25rem );
+    margin-bottom: clamp( 0.3125rem , -0.1041666667rem  +  2.0833333333vw , 1.25rem );
   }
 }
 
-@supports not (margin-bottom: clamp( 0.3125rem , -0.0284090909rem  +  1.7045454545vw , 1.25rem )) {
+@supports not (margin-bottom: clamp( 0.3125rem , -0.1041666667rem  +  2.0833333333vw , 1.25rem )) {
   .article__info {
-    margin-bottom: calc(0.3125rem + 0.9375 * (100vw - 20rem) / 55);
+    margin-bottom: calc(0.3125rem + 0.9375 * (100vw - 20rem) / 45);
   }
 }
 
@@ -514,6 +589,7 @@ h6 {
 }
 
 .article__author-info {
+  padding-top: 0.3125rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -531,12 +607,170 @@ h6 {
 }
 
 .article__date {
+  padding-top: 0.3125rem;
   font-weight: 400;
+}
+
+.article__text {
+  line-height: 1.3333333333;
+  font-weight: 400;
+}
+
+@supports (margin-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem )) {
+  .article__text {
+    margin-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem );
+  }
+}
+
+@supports not (margin-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem )) {
+  .article__text {
+    margin-bottom: calc(0.625rem + 0.625 * (100vw - 20rem) / 45);
+  }
+}
+
+@supports (margin-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem )) {
+  .article__text p:not(:last-child) {
+    margin-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem );
+  }
+}
+
+@supports not (margin-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem )) {
+  .article__text p:not(:last-child) {
+    margin-bottom: calc(0.625rem + 0.625 * (100vw - 20rem) / 45);
+  }
 }
 
 .article__image {
   width: 100%;
   display: block;
+  max-height: 31.25rem;
+  min-height: 15.625rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 0.9375rem;
+}
+
+.article__image-label {
+  display: block;
+  color: #6b6b6b;
+  font-size: 0.75rem;
+}
+
+@supports (margin-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem )) {
+  .article__image-label {
+    margin-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem );
+  }
+}
+
+@supports not (margin-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem )) {
+  .article__image-label {
+    margin-bottom: calc(0.625rem + 0.625 * (100vw - 20rem) / 45);
+  }
+}
+
+.form {
+  background-color: #141414;
+  padding: 1.875rem 1.25rem;
+  max-width: 28.125rem;
+  margin: auto;
+  border-radius: 0.625rem;
+  caret-color: rgba(255, 255, 255, 0.86);
+  color: rgba(255, 255, 255, 0.86);
+}
+
+.form__title {
+  font-weight: 700;
+  text-align: center;
+  font-size: 1.375rem;
+  margin-bottom: 1.25rem;
+}
+
+.form__form {
+  display: -ms-grid;
+  display: grid;
+  gap: 1.25rem;
+}
+
+.form__input {
+  font-size: 1rem;
+  height: 2.5rem;
+  padding-left: 1.875rem;
+  color: rgba(255, 255, 255, 0.86);
+  background-color: transparent;
+  -webkit-transition: color 0.3s ease 0s;
+  -o-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.86);
+}
+
+.form__input::-webkit-input-placeholder {
+  color: rgba(255, 255, 255, 0.86);
+  -webkit-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
+}
+
+.form__input::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.86);
+  -moz-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
+}
+
+.form__input:-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.86);
+  -ms-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
+}
+
+.form__input::-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.86);
+  -ms-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
+}
+
+.form__input::placeholder {
+  color: rgba(255, 255, 255, 0.86);
+  -webkit-transition: color 0.3s ease 0s;
+  -o-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
+}
+
+.form__input._form-error {
+  color: red;
+}
+
+.form__input._form-error::-webkit-input-placeholder {
+  color: red;
+}
+
+.form__input._form-error::-moz-placeholder {
+  color: red;
+}
+
+.form__input._form-error:-ms-input-placeholder {
+  color: red;
+}
+
+.form__input._form-error::-ms-input-placeholder {
+  color: red;
+}
+
+.form__input._form-error::placeholder {
+  color: red;
+}
+
+.form__input._form-focus {
+  border-bottom: 1px solid #00beff;
+}
+
+.form__button {
+  border: 1px solid rgba(255, 255, 255, 0.86);
+  border-radius: 1.25rem;
+  margin: auto;
+  margin-top: 1.25rem;
+  padding: 0.3125rem 3.125rem;
+  -webkit-transition: color 0.3s ease 0s, border 0.3s ease 0s;
+  -o-transition: color 0.3s ease 0s, border 0.3s ease 0s;
+  transition: color 0.3s ease 0s, border 0.3s ease 0s;
 }
 
 @media (min-width: 29.99875em) {
@@ -580,6 +814,10 @@ h6 {
   }
 
   .header__actions-text {
+    display: none;
+  }
+
+  .page__menu {
     display: none;
   }
 
@@ -687,6 +925,16 @@ h6 {
     background-color: #00beff;
   }
 
+  .page__menu-link {
+    -webkit-transition: color 0.3s ease 0s;
+    -o-transition: color 0.3s ease 0s;
+    transition: color 0.3s ease 0s;
+  }
+
+  .page__menu-link:hover {
+    color: #0519c5;
+  }
+
   .page__breadcrumbs-link {
     -webkit-transition: color 0.3s ease 0s;
     -o-transition: color 0.3s ease 0s;
@@ -695,5 +943,58 @@ h6 {
 
   .page__breadcrumbs-link:hover {
     color: #00beff;
+  }
+
+  .form__input._form-focus:hover {
+    color: rgba(255, 255, 255, 0.86);
+  }
+
+  .form__input._form-focus:hover::-webkit-input-placeholder {
+    color: rgba(255, 255, 255, 0.86);
+  }
+
+  .form__input._form-focus:hover::-moz-placeholder {
+    color: rgba(255, 255, 255, 0.86);
+  }
+
+  .form__input._form-focus:hover:-ms-input-placeholder {
+    color: rgba(255, 255, 255, 0.86);
+  }
+
+  .form__input._form-focus:hover::-ms-input-placeholder {
+    color: rgba(255, 255, 255, 0.86);
+  }
+
+  .form__input._form-focus:hover::placeholder {
+    color: rgba(255, 255, 255, 0.86);
+  }
+
+  .form__input:hover {
+    color: #00beff;
+  }
+
+  .form__input:hover::-webkit-input-placeholder {
+    color: #00beff;
+  }
+
+  .form__input:hover::-moz-placeholder {
+    color: #00beff;
+  }
+
+  .form__input:hover:-ms-input-placeholder {
+    color: #00beff;
+  }
+
+  .form__input:hover::-ms-input-placeholder {
+    color: #00beff;
+  }
+
+  .form__input:hover::placeholder {
+    color: #00beff;
+  }
+
+  .form__button:hover {
+    color: #00beff;
+    border: 1px solid #00beff;
   }
 }
