--- a/css/style.css
+++ b/css/style.css
@@ -392,6 +392,171 @@ h6 {
           transform: rotate(45deg);
 }
 
+.footer {
+  background-color: #141414;
+  color: rgba(255, 255, 255, 0.75);
+}
+
+.footer__container {
+  max-width: 89.375rem;
+}
+
+.footer__socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 1.875rem 0;
+}
+
+@supports (gap: clamp( 0.9375rem , -4.021177686rem  +  10.3305785124vw , 2.5rem )) {
+  .footer__socials {
+    gap: clamp( 0.9375rem , -4.021177686rem  +  10.3305785124vw , 2.5rem );
+  }
+}
+
+@supports not (gap: clamp( 0.9375rem , -4.021177686rem  +  10.3305785124vw , 2.5rem )) {
+  .footer__socials {
+    gap: calc(0.9375rem + 1.5625 * (100vw - 48rem) / 15.125);
+  }
+}
+
+.footer__logo {
+  color: #fff;
+  -webkit-transition: color 0.3s ease 0s;
+  -o-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
+}
+
+.footer__socials-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+@supports (gap: clamp( 0.9375rem , -4.021177686rem  +  10.3305785124vw , 2.5rem )) {
+  .footer__socials-items {
+    gap: clamp( 0.9375rem , -4.021177686rem  +  10.3305785124vw , 2.5rem );
+  }
+}
+
+@supports not (gap: clamp( 0.9375rem , -4.021177686rem  +  10.3305785124vw , 2.5rem )) {
+  .footer__socials-items {
+    gap: calc(0.9375rem + 1.5625 * (100vw - 48rem) / 15.125);
+  }
+}
+
+.footer__socials-item svg {
+  width: 2.5rem;
+  height: 2.5rem;
+  padding: 0.625rem;
+  border-radius: 0.3125rem;
+  -webkit-transition: background-color 0.3s ease 0s;
+  -o-transition: background-color 0.3s ease 0s;
+  transition: background-color 0.3s ease 0s;
+}
+
+.footer__socials-submenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1rem;
+}
+
+@supports (gap: clamp( 0.9375rem , -4.021177686rem  +  10.3305785124vw , 2.5rem )) {
+  .footer__socials-submenu {
+    gap: clamp( 0.9375rem , -4.021177686rem  +  10.3305785124vw , 2.5rem );
+  }
+}
+
+@supports not (gap: clamp( 0.9375rem , -4.021177686rem  +  10.3305785124vw , 2.5rem )) {
+  .footer__socials-submenu {
+    gap: calc(0.9375rem + 1.5625 * (100vw - 48rem) / 15.125);
+  }
+}
+
+.footer__submenu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 1.875rem 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-top: 1px solid #6b6b6b;
+  font-size: 1rem;
+  gap: 0.9375rem;
+}
+
+.footer__submenu-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 1.875rem;
+     -moz-column-gap: 1.875rem;
+          column-gap: 1.875rem;
+  row-gap: 0.9375rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer-menu {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[6];
+  grid-template-columns: repeat(6, 1fr);
+}
+
+.footer-menu__item {
+  border-top: 1px solid #6b6b6b;
+  padding: 1.5625rem 0;
+  padding-right: 0.625rem;
+}
+
+.footer-menu__title {
+  margin-bottom: 0.9375rem;
+}
+
+.footer-menu__title-link {
+  font-weight: 500;
+  color: #fff;
+}
+
+.footer-menu__subitem:not(:last-child) {
+  margin-bottom: 0.625rem;
+}
+
+.footer-menu__sublink {
+  font-size: 1rem;
+}
+
 .page {
   margin-top: 2.75rem;
 }
@@ -671,9 +836,10 @@ h6 {
 .form {
   max-width: 25rem;
   margin: auto;
-  border-radius: 0.625rem;
   caret-color: #141414;
   font-size: 0.875rem;
+  border: 1px solid #acacac;
+  padding: 0.9375rem;
 }
 
 @supports (margin-bottom: clamp( 1.875rem , -0.0694444444rem  +  9.7222222222vw , 6.25rem )) {
@@ -713,7 +879,7 @@ h6 {
   -webkit-transition: color 0.3s ease 0s;
   -o-transition: color 0.3s ease 0s;
   transition: color 0.3s ease 0s;
-  border: 1px solid #6b6b6b;
+  border: 1px solid #acacac;
 }
 
 .form__input::-webkit-input-placeholder {
@@ -818,6 +984,16 @@ h6 {
   .header__menu {
     display: none;
   }
+
+  .footer__submenu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 @media (max-width: 47.99875em) {
@@ -826,6 +1002,10 @@ h6 {
   }
 
   .header__actions-text {
+    display: none;
+  }
+
+  .footer-menu {
     display: none;
   }
 
@@ -846,6 +1026,13 @@ h6 {
 }
 
 @media (max-width: 29.99875em) {
+  .footer__socials {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
   .article__author-info {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -935,6 +1122,36 @@ h6 {
   .icon-menu:hover::before,
   .icon-menu:hover span {
     background-color: #00beff;
+  }
+
+  .footer__logo:hover {
+    -webkit-animation: logo 1.2s ease-in-out infinite;
+            animation: logo 1.2s ease-in-out infinite;
+    color: #00beff;
+  }
+
+  .footer__socials-item svg:hover {
+    background-color: rgb(51, 51, 51);
+  }
+
+  .footer__socials-link:hover {
+    text-decoration: underline;
+  }
+
+  .footer__socials-sublink:hover {
+    text-decoration: underline;
+  }
+
+  .footer__submenu-link:hover {
+    text-decoration: underline;
+  }
+
+  .footer-menu__title-link:hover {
+    text-decoration: underline;
+  }
+
+  .footer-menu__sublink:hover {
+    text-decoration: underline;
   }
 
   .page__menu-link {
