--- a/css/style.css
+++ b/css/style.css
@@ -909,13 +909,13 @@ h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0 0.1875rem;
+  padding: 0 0.625rem;
   font-size: 0.75rem;
 }
 
 .form__phone-wrapper input {
   width: 100%;
-  padding-left: 0.3125rem;
+  padding-left: 0.625rem;
 }
 
 .form__button {
@@ -929,6 +929,269 @@ h6 {
   -webkit-transition: color 0.3s ease 0s, background-color 0.3s ease 0s;
   -o-transition: color 0.3s ease 0s, background-color 0.3s ease 0s;
   transition: color 0.3s ease 0s, background-color 0.3s ease 0s;
+}
+
+.fbcomments {
+  background-color: #323637;
+  width: 100%;
+  max-width: 62.5rem;
+  margin: auto;
+  border-radius: 0.625rem;
+  padding: 1.25rem;
+  padding-top: 0;
+  color: #fff;
+  position: relative;
+}
+
+@supports (margin-bottom: clamp( 1.875rem , -0.0694444444rem  +  9.7222222222vw , 6.25rem )) {
+  .fbcomments {
+    margin-bottom: clamp( 1.875rem , -0.0694444444rem  +  9.7222222222vw , 6.25rem );
+  }
+}
+
+@supports not (margin-bottom: clamp( 1.875rem , -0.0694444444rem  +  9.7222222222vw , 6.25rem )) {
+  .fbcomments {
+    margin-bottom: calc(1.875rem + 4.375 * (100vw - 20rem) / 45);
+  }
+}
+
+.fbcomments__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-bottom: 1.25rem;
+  border-bottom: 1px solid #fff;
+  gap: 0.625rem;
+}
+
+@supports (padding-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem )) {
+  .fbcomments__header {
+    padding-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem );
+  }
+}
+
+@supports not (padding-bottom: clamp( 0.625rem , 0.3472222222rem  +  1.3888888889vw , 1.25rem )) {
+  .fbcomments__header {
+    padding-bottom: calc(0.625rem + 0.625 * (100vw - 20rem) / 45);
+  }
+}
+
+@supports (margin-bottom: clamp( 0.9375rem , 0.7986111111rem  +  0.6944444444vw , 1.25rem )) {
+  .fbcomments__header {
+    margin-bottom: clamp( 0.9375rem , 0.7986111111rem  +  0.6944444444vw , 1.25rem );
+  }
+}
+
+@supports not (margin-bottom: clamp( 0.9375rem , 0.7986111111rem  +  0.6944444444vw , 1.25rem )) {
+  .fbcomments__header {
+    margin-bottom: calc(0.9375rem + 0.3125 * (100vw - 20rem) / 45);
+  }
+}
+
+.fbcomments__title {
+  border-top-left-radius: 0.625rem;
+  border-top-right-radius: 0.625rem;
+  text-align: center;
+  padding: 0.3125rem 0;
+  font-weight: 600;
+  margin-bottom: 0.625rem;
+  background-color: #444547;
+  margin-left: -1.25rem;
+  margin-right: -1.25rem;
+}
+
+.fbcomments__counter {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.fbcomments__sorting-label {
+  font-size: 0.875rem;
+}
+
+.fbcomments__select {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 0.875rem;
+  background-color: #fff;
+  color: #000;
+  text-align: center;
+  padding: 0.1875rem;
+}
+
+.fbcomments__select svg {
+  width: 0.9375rem;
+  line-height-step: 0.9375rem;
+}
+
+.fbcomments__textarea {
+  width: 100%;
+  color: #000;
+  caret-color: #000;
+  padding: 0.625rem;
+  margin-bottom: 0.3125rem;
+  resize: none;
+}
+
+.fbcomments__textarea::-webkit-input-placeholder {
+  color: grey;
+}
+
+.fbcomments__textarea::-moz-placeholder {
+  color: grey;
+}
+
+.fbcomments__textarea:-ms-input-placeholder {
+  color: grey;
+}
+
+.fbcomments__textarea::-ms-input-placeholder {
+  color: grey;
+}
+
+.fbcomments__textarea::placeholder {
+  color: grey;
+}
+
+.fbcomments__textarea:focus ~ .fbcomments__submit {
+  display: block;
+}
+
+.fbcomments__submit {
+  float: right;
+  background-color: #3578e3;
+  padding: 0.3125rem 0.625rem;
+  font-size: 0.875rem;
+  font-weight: 600;
+}
+
+.fbcomments__comments {
+  margin-top: 2.8125rem;
+}
+
+.fbcomments__comments_sub {
+  padding-left: 3.125rem;
+  margin-top: 1.25rem;
+}
+
+.fbcomments__comments_sub li {
+  padding-bottom: 0.3125rem;
+}
+
+.fbcomments__comments > :nth-child(n+4) {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transform: translate(0, 100%);
+      -ms-transform: translate(0, 100%);
+          transform: translate(0, 100%);
+}
+
+.fbcomments__comments._showmore ~ .fbcomments__showmore {
+  display: none;
+}
+
+.fbcomments__comments._showmore > :nth-child(n+4) {
+  -webkit-transition: opacity 0.5s ease 0s, -webkit-transform 0.5s ease 0s;
+  transition: opacity 0.5s ease 0s, -webkit-transform 0.5s ease 0s;
+  -o-transition: opacity 0.5s ease 0s, transform 0.5s ease 0s;
+  transition: opacity 0.5s ease 0s, transform 0.5s ease 0s;
+  transition: opacity 0.5s ease 0s, transform 0.5s ease 0s, -webkit-transform 0.5s ease 0s;
+  opacity: 1;
+  position: relative;
+  pointer-events: auto;
+  -webkit-transform: translate(0px, 0px);
+      -ms-transform: translate(0px, 0px);
+          transform: translate(0px, 0px);
+}
+
+.fbcomments__comment:not(:last-child) {
+  margin-bottom: 1.25rem;
+}
+
+.fbcomments__comment-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.625rem;
+}
+
+.fbcomments__avatar {
+  width: 2.5rem;
+  height: 2.5rem;
+  display: block;
+}
+
+.fbcomments__name {
+  font-weight: 600;
+  font-size: 1.125rem;
+  margin-bottom: 0.625rem;
+}
+
+.fbcomments__text {
+  margin-bottom: 0.625rem;
+  font-size: 0.875rem;
+}
+
+.fbcomments__actions {
+  font-size: 0.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.3125rem;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.fbcomments__actions :not(:last-child) {
+  position: relative;
+}
+
+.fbcomments__actions :not(:last-child):after {
+  content: "•";
+  padding-left: 0.3125rem;
+  -webkit-transition: color 0.2s ease 0s;
+  -o-transition: color 0.2s ease 0s;
+  transition: color 0.2s ease 0s;
+}
+
+.fbcomments__like-counter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.1875rem;
+}
+
+.fbcomments__like-counter svg {
+  width: 0.75rem;
+  height: 0.75rem;
+}
+
+.fbcomments__showmore {
+  background-color: #3578e3;
+  width: 100%;
+  font-size: 0.875rem;
+  padding: 0.625rem;
+  font-weight: 600;
 }
 
 @media (min-width: 29.99875em) {
@@ -1022,6 +1285,16 @@ h6 {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: start;
+  }
+
+  .fbcomments {
+    padding-left: 0.3125rem;
+    padding-right: 0.3125rem;
+  }
+
+  .fbcomments__title {
+    margin-left: -0.3125rem;
+    margin-right: -0.3125rem;
   }
 }
 
@@ -1196,5 +1469,39 @@ h6 {
   .form__button:hover {
     color: #141414;
     background-color: #00beff;
+  }
+
+  .loaded .fbcomments__submit {
+    -webkit-transition: background-color 0.5s ease 0s;
+    -o-transition: background-color 0.5s ease 0s;
+    transition: background-color 0.5s ease 0s;
+  }
+
+  .fbcomments__submit:hover {
+    background-color: blue;
+  }
+
+  .loaded .fbcomments__actions button {
+    -webkit-transition: color 0.2s ease 0s;
+    -o-transition: color 0.2s ease 0s;
+    transition: color 0.2s ease 0s;
+  }
+
+  .fbcomments__actions button:hover {
+    color: #3578e3;
+  }
+
+  .fbcomments__actions button:hover::after {
+    color: #fff;
+  }
+
+  .loaded .fbcomments__showmore {
+    -webkit-transition: background-color 0.5s ease 0s;
+    -o-transition: background-color 0.5s ease 0s;
+    transition: background-color 0.5s ease 0s;
+  }
+
+  .fbcomments__showmore:hover {
+    background-color: blue;
   }
 }
